// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package datacommons.v2;

option go_package = "github.com/datacommonsorg/mixer/internal/proto/v2";

import "v1/pagination.proto";

message SpannerInfo {
  // The offset of the next read item, starts from 0.
  int32 offset = 1;
}

// Represents the pagination info of one paginated request.
// Each DataSourceInfo corresponds to the info for one data source.
message Pagination {
  message DataSourceInfo {
    // Id of the data source.
    string id = 1;

    oneof data_source_info {
      datacommons.v1.PaginationInfo bigtable_info = 2;
      SpannerInfo spanner_info = 3;
      string string_info = 4;
    }
  }

  // Using repeated to ensure consistent ordering for deterministic tokens.
  repeated DataSourceInfo info = 1;
}